images location chnages

--- a/index.html
+++ b/index.html
@@ -32,39 +32,39 @@
             </div>
             <div class="primaryDeck-parent pt-4 mt-4 pt-lg-5 mt-lg-5 pt-lg-5 mt-lg-5">
                 <div class="primaryDeck-child" data-id="secondaryDeck">
-                    <img src="assets/images/box-1.gif" alt="">
+                    <img src="assets/images/home/box-1.gif" alt="">
                     <p>Basic Oxygen Furnace</p>
                 </div>
                 <div class="primaryDeck-child" data-id="secondaryDeck1">
-                    <img src="assets/images/box-2.gif" alt="">
+                    <img src="assets/images/home/box-2.gif" alt="">
                     <p>Electric Arc Furnace</p>
                 </div>
                 <div class="primaryDeck-child" data-id="secondaryDeck2">
-                    <img src="assets/images/box-3.gif" alt="">
+                    <img src="assets/images/home/box-3.gif" alt="">
                     <p>Flow Control</p>
                 </div>
                 <div class="primaryDeck-child" data-id="secondaryDeck3">
-                    <img src="assets/images/box-4.gif" alt="">
+                    <img src="assets/images/home/box-4.gif" alt="">
                     <p>Foundries</p>
                 </div>
                 <div class="primaryDeck-child" data-id="secondaryDeck4">
-                    <img src="assets/images/box-5.gif" alt="">
+                    <img src="assets/images/home/box-5.gif" alt="">
                     <p>Hot Metal Transport</p>
                 </div>
                 <div class="primaryDeck-child" data-id="secondaryDeck5">
-                    <img src="assets/images/box-6.gif" alt="">
+                    <img src="assets/images/home/box-6.gif" alt="">
                     <p>Induction Furnace</p>
                 </div>
                 <div class="primaryDeck-child" data-id="secondaryDeck6">
-                    <img src="assets/images/box-7.gif" alt="">
+                    <img src="assets/images/home/box-7.gif" alt="">
                     <p>RH Degasser</p>
                 </div>
                 <div class="primaryDeck-child" data-id="secondaryDeck7">
-                    <img src="assets/images/box-8.gif" alt="">
+                    <img src="assets/images/home/box-8.gif" alt="">
                     <p>Solutions for Stainless Steelmaking</p>
                 </div>
                 <div class="primaryDeck-child" data-id="secondaryDeck8">
-                    <img src="assets/images/box-9.gif" alt="">
+                    <img src="assets/images/home/box-9.gif" alt="">
                     <p>Systems for Steel Casting & Treatment Ladles</p>
                 </div>
             </div>
@@ -92,6 +92,13 @@
                                     <div class="col-2 col-sm-2 col-md-2 col-lg-1">
                                         <img src="assets/images/small-logo.png" alt="" class="w-100">
                                     </div>
+                                </div>
+
+                                <div class="row justify-content-center align-items-center h-100">
+                                    <div class="col-4">
+                                        <img src="assets/images/small-logo.png" alt="" class="w-100">
+                                    </div>
+                                     
                                 </div>
                             </div>
                             
