--- a/index.html
+++ b/index.html
@@ -80,23 +80,23 @@
                 <div class="swiper1 mySwiper">
                     <div class="swiper-wrapper">
                         <div class="swiper-slide">
-                            <div class="container position-absolute top-0">
+                            <div class="container h-100">
                                 <div class="row justify-content-between align-items-center pt-5">
                                     <div class="col-2 col-sm-2 col-md-2 col-lg-1">
                                         <img src="assets/images/home-icon.png" alt="" class="w-50">
                                     </div>
                                     <div class="col-8 col-sm-8 col-md-8 col-lg-9">
-                                        <p class="mb-0">STEEL / CONVERTER</p>
-                                        <h2>The Basic Oxygen Furnace</h2>
+                                        <p data-font-style="Neutrif Pro" data-blue-color="blue" class="mb-0">STEEL / CONVERTER</p>
+                                        <h2 data-font-style="Neutrif Pro" data-blue-color="blue">The Basic Oxygen Furnace</h2>
                                     </div>
                                     <div class="col-2 col-sm-2 col-md-2 col-lg-1">
                                         <img src="assets/images/small-logo.png" alt="" class="w-100">
                                     </div>
                                 </div>
 
-                                <div class="row justify-content-center align-items-center h-100">
-                                    <div class="col-4">
-                                        <img src="assets/images/small-logo.png" alt="" class="w-100">
+                                <div class="row justify-content-center align-items-center pt-5 mt-5">
+                                    <div class="col-12 col-lg-8">
+                                        <img src="assets/images/oxygen-furnace/basic-oxygen-furnace.svg" alt="" class="w-100">
                                     </div>
                                      
                                 </div>
