--- a/index.html
+++ b/index.html
@@ -16,17 +16,17 @@
     <div class="deck-container">
 
         <!-- Front View  -->
-        <section id="primaryDeck" class="h-100">
+        <section id="primaryDeck" class="">
             <div class="container">
                 <div class="row justify-content-between align-items-center pt-5">
                     <div class="col-2 col-sm-2 col-md-2 col-lg-1">
-                        <img src="assets/images/home-icon.png" alt="" class="w-50">
+                        <!-- <img src="assets/images/home-icon.png" alt="" class="w-50"> -->
                     </div>
                     <div class="col-8 col-sm-8 col-md-8 col-lg-9"> 
-                        <h2 class="text-center">The Main Headline of Furnace</h2>
+                        <h2 class="text-center display-5" data-font-weight="500" data-font-style="Neutrif Pro">The Main Headline of Furnace</h2>
                     </div>
                     <div class="col-2 col-sm-2 col-md-2 col-lg-1">
-                        <img src="assets/images/small-logo.png" alt="" class="w-100">
+                        <img src="assets/images/rhi-logo.svg" alt="" class="w-100">
                     </div>
                 </div>
             </div>
@@ -75,19 +75,19 @@
 
 
         <!-- Detailed View  -->
-        <section id="secondaryDeck" class="h-100 disable">
+        <section id="secondaryDeck" class="disable">
             <div class="secondaryDeck-parent">
                 <div class="swiper1 mySwiper">
                     <div class="swiper-wrapper">
                         <div class="swiper-slide">
-                            <div class="container h-100">
+                            <div class="container">
                                 <div class="row justify-content-between align-items-center pt-5">
                                     <div class="col-2 col-sm-2 col-md-2 col-lg-1">
                                         <img src="assets/images/home-icon.png" alt="" class="w-50">
                                     </div>
                                     <div class="col-8 col-sm-8 col-md-8 col-lg-9">
-                                        <p data-font-style="Neutrif Pro" data-blue-color="blue" class="mb-0">STEEL / CONVERTER</p>
-                                        <h2 data-font-style="Neutrif Pro" data-blue-color="blue">The Basic Oxygen Furnace</h2>
+                                        <p class="d-inline px-4 py-2 rounded-5" data-font-style="Neutrif Pro" data-color="white" data-bg-color="red">STEEL / CONVERTER</p>
+                                        <h2 class="pt-3 display-6" data-font-weight="500" data-font-style="Neutrif Pro" data-color="blue">The Basic Oxygen Furnace</h2>
                                     </div>
                                     <div class="col-2 col-sm-2 col-md-2 col-lg-1">
                                         <img src="assets/images/small-logo.png" alt="" class="w-100">
