--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
 </head>
 
 <body>
-    <div class="container-fluid">
+   
     <div class="deck-container">
-
+        
         <!-- Front View  -->
         <section id="primaryDeck" class="">
             <div class="container">
@@ -30,42 +30,43 @@
                     </div>
                 </div>
             </div>
+            
             <div class="primaryDeck-parent pt-4 mt-4 pt-lg-5 mt-lg-5 pt-lg-5 mt-lg-5">
                 <div class="primaryDeck-child" data-id="secondaryDeck">
                     <img src="assets/images/home/box-1.gif" alt="">
-                    <p>Basic Oxygen Furnace</p>
+                    <p data-p-size="p1" data-font-style="Neutrif Pro">Basic Oxygen Furnace</p>
                 </div>
                 <div class="primaryDeck-child" data-id="secondaryDeck1">
                     <img src="assets/images/home/box-2.gif" alt="">
-                    <p>Electric Arc Furnace</p>
+                    <p data-p-size="p1" data-font-style="Neutrif Pro">Electric Arc Furnace</p>
                 </div>
                 <div class="primaryDeck-child" data-id="secondaryDeck2">
                     <img src="assets/images/home/box-3.gif" alt="">
-                    <p>Flow Control</p>
+                    <p data-p-size="p1" data-font-style="Neutrif Pro">Flow Control</p>
                 </div>
                 <div class="primaryDeck-child" data-id="secondaryDeck3">
                     <img src="assets/images/home/box-4.gif" alt="">
-                    <p>Foundries</p>
+                    <p data-p-size="p1" data-font-style="Neutrif Pro">Foundries</p>
                 </div>
                 <div class="primaryDeck-child" data-id="secondaryDeck4">
                     <img src="assets/images/home/box-5.gif" alt="">
-                    <p>Hot Metal Transport</p>
+                    <p data-p-size="p1" data-font-style="Neutrif Pro">Hot Metal Transport</p>
                 </div>
                 <div class="primaryDeck-child" data-id="secondaryDeck5">
                     <img src="assets/images/home/box-6.gif" alt="">
-                    <p>Induction Furnace</p>
+                    <p data-p-size="p1" data-font-style="Neutrif Pro">Induction Furnace</p>
                 </div>
                 <div class="primaryDeck-child" data-id="secondaryDeck6">
                     <img src="assets/images/home/box-7.gif" alt="">
-                    <p>RH Degasser</p>
+                    <p data-p-size="p1" data-font-style="Neutrif Pro">RH Degasser</p>
                 </div>
                 <div class="primaryDeck-child" data-id="secondaryDeck7">
                     <img src="assets/images/home/box-8.gif" alt="">
-                    <p>Solutions for Stainless Steelmaking</p>
+                    <p data-p-size="p1" data-font-style="Neutrif Pro">Solutions for Stainless Steelmaking</p>
                 </div>
                 <div class="primaryDeck-child" data-id="secondaryDeck8">
                     <img src="assets/images/home/box-9.gif" alt="">
-                    <p>Systems for Steel Casting & Treatment Ladles</p>
+                    <p data-p-size="p1" data-font-style="Neutrif Pro">Systems for Steel Casting & Treatment Ladles</p>
                 </div>
             </div>
 
@@ -81,13 +82,15 @@
                     <div class="swiper-wrapper">
                         <div class="swiper-slide">
                             <div class="container">
-                                <div class="row justify-content-between align-items-center pt-5">
+                                <div class="row justify-content-between align-items-start pt-5">
                                     <div class="col-2 col-sm-2 col-md-2 col-lg-1">
                                         <img src="assets/images/home-icon.png" alt="" class="w-50">
                                     </div>
                                     <div class="col-8 col-sm-8 col-md-8 col-lg-9">
-                                        <p class="d-inline px-4 py-2 rounded-5" data-font-style="Neutrif Pro" data-color="white" data-bg-color="red">STEEL / CONVERTER</p>
+                                        <p class="d-inline px-5 py-2 rounded-5" data-font-style="Neutrif Pro" data-color="white" data-bg-color="red">STEEL / CONVERTER</p>
                                         <h2 class="pt-3 display-6" data-font-weight="500" data-font-style="Neutrif Pro" data-color="blue">The Basic Oxygen Furnace</h2>
+                                        <p data-p-size="p1" data-font-weight="400" data-font-style="Neutrif Pro" data-color="blue">RHI Magnesita provides lining concepts which are suited to the customer-specific converter operation and process
+                                            conditions. Both carbon-bonded and synthetic resin-bonded bricks are offered as required. Highest campaign lifetime levels can be achieved in combination with the specifically adapted RHI Magnesita maintenance concepts.</p>
                                     </div>
                                     <div class="col-2 col-sm-2 col-md-2 col-lg-1">
                                         <img src="assets/images/small-logo.png" alt="" class="w-100">
@@ -168,7 +171,7 @@
 
     </div>
     <!-- Deck Container Closed -->
-</div>
+ 
 
     <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
 
