--- a/index.html
+++ b/index.html
@@ -17,22 +17,23 @@
 
         <!-- Front View  -->
         <section id="primaryDeck" class="">
-            <div class="container">
-                <div class="row justify-content-between align-items-center pt-5">
-                    <div class="col-2 col-sm-2 col-md-2 col-lg-1">
+            <div class="container-fluid px-1 px-md-3 px-lg-4 px-xl-5">
+                <div class="row justify-content-between align-items-start pt-5">
+                    <div class="col-2 col-sm-2 col-md-2 col-lg-1 col-xl-1">
                         <!-- <img src="assets/images/home-icon.png" alt="" class="w-50"> -->
                     </div>
-                    <div class="col-8 col-sm-8 col-md-8 col-lg-9">
-                        <h2 class="text-center display-5" data-font-weight="500" data-font-style="Neutrif Pro">The Main
+                    <div class="col-8 col-sm-8 col-md-7 col-lg-10 col-xl-10">
+                        <h2 class="text-center display-5" data-color="blue" data-font-weight="600"
+                            data-font-style="Neutrif Pro">The Main
                             Headline of Furnace</h2>
                     </div>
-                    <div class="col-2 col-sm-2 col-md-2 col-lg-1">
+                    <div class="col-2 col-sm-2 col-md-2 col-lg-1 col-xl-1">
                         <img src="assets/images/rhi-logo.svg" alt="" class="w-100">
                     </div>
                 </div>
             </div>
 
-            <div class="primaryDeck-parent pt-4 mt-4 pt-lg-5 mt-lg-5 pt-lg-5 mt-lg-5">
+            <div class="primaryDeck-parent mt-2 mt-lg-3">
                 <div class="primaryDeck-child" data-id="secondaryDeck">
                     <img src="assets/images/home/box-1.gif" alt="">
                     <p data-p-size="p1" data-font-style="Neutrif Pro">Basic Oxygen Furnace</p>
@@ -87,12 +88,13 @@
                             <div class="container">
                                 <div class="row justify-content-between align-items-start pt-5">
                                     <div class="col-2 col-sm-2 col-md-2 col-lg-1">
-                                        <img src="assets/images/home-icon.png" alt="" class="w-50">
+                                        <img src="assets/images/home-icon.png" alt="" class="w-50" onclick="gotohome();">
                                     </div>
                                     <div class="col-8 col-sm-8 col-md-8 col-lg-9">
                                         <p class="d-inline px-5 py-2 rounded-5" data-font-style="Neutrif Pro"
-                                            data-color="white" data-bg-color="red">STEEL / CONVERTER</p>
-                                        <h2 class="pt-3 display-6" data-font-weight="500" data-font-style="Neutrif Pro"
+                                            data-color="white" data-bg-color="red" data-p-size="p0">STEEL / CONVERTER
+                                        </p>
+                                        <h2 class="pt-3 display-6" data-font-weight="600" data-font-style="Neutrif Pro"
                                             data-color="blue">The Basic Oxygen Furnace</h2>
                                         <!-- <p data-p-size="p1" data-font-weight="400" data-font-style="Neutrif Pro" data-color="blue">RHI Magnesita provides lining concepts which are suited to the customer-specific converter operation and process
                                             conditions. Both carbon-bonded and synthetic resin-bonded bricks are offered as required. Highest campaign lifetime levels can be achieved in combination with the specifically adapted RHI Magnesita maintenance concepts.</p> -->
@@ -113,6 +115,7 @@
                             <!------ Box-1 Slide-1 ----->
 
                         </div>
+
                         <div class="swiper-slide">
                             <!------ Box-1 Slide-2 ----->
                             <div class="container">
@@ -122,8 +125,9 @@
                                     </div>
                                     <div class="col-8 col-sm-8 col-md-8 col-lg-9">
                                         <p class="d-inline px-5 py-2 rounded-5" data-font-style="Neutrif Pro"
-                                            data-color="white" data-bg-color="red">STEEL / CONVERTER</p>
-                                        <h2 class="pt-3 display-6" data-font-weight="500" data-font-style="Neutrif Pro"
+                                            data-color="white" data-bg-color="red" data-p-size="p0">STEEL / CONVERTER
+                                        </p>
+                                        <h2 class="pt-3 display-6" data-font-weight="600" data-font-style="Neutrif Pro"
                                             data-color="blue">Optimized Lining for BOF</h2>
                                         <p data-p-size="p1" data-font-weight="400" data-font-style="Neutrif Pro"
                                             data-color="blue">RHI Magnesita provides lining concepts which are suited to
@@ -147,7 +151,37 @@
                             </div>
                             <!------ Box-1 Slide-2 ----->
                         </div>
-                        <div class="swiper-slide">Slide 3</div>
+
+                        <div class="swiper-slide">
+                            <!------ Box-1 Slide-3 ----->
+                            <div class="container">
+                                <div class="row justify-content-between align-items-start pt-5">
+                                    <div class="col-2 col-sm-2 col-md-2 col-lg-1">
+                                        <img src="assets/images/home-icon.png" alt="" class="w-50">
+                                    </div>
+                                    <div class="col-8 col-sm-8 col-md-8 col-lg-9">
+                                        <p class="d-inline px-5 py-2 rounded-5" data-font-style="Neutrif Pro"
+                                            data-color="white" data-bg-color="red" data-p-size="p0">STEEL / CONVERTER
+                                        </p>
+                                        <h2 class="pt-3 display-6" data-font-weight="600" data-font-style="Neutrif Pro"
+                                            data-color="blue">Product Variety of Bricks & Mixes for the BOF</h2>
+                                        
+                                    </div>
+                                    <div class="col-2 col-sm-2 col-md-2 col-lg-1">
+                                        <img src="assets/images/small-logo.png" alt="" class="w-100">
+                                    </div>
+                                </div>
+
+                                <div class="row justify-content-center align-items-center pt-5 mt-0">
+                                    <div class="col-12 col-lg-8">
+                                        <img src="assets/images/oxygen-furnace/optimized-lining-for-BOF.svg" alt=""
+                                            class="w-100">
+                                    </div>
+
+                                </div>
+                            </div>
+                            <!------ Box-1 Slide-3 ----->
+                        </div>
                         <div class="swiper-slide">Slide 4</div>
                         <div class="swiper-slide">Slide 5</div>
                         <div class="swiper-slide">Slide 6</div>
@@ -155,10 +189,11 @@
                         <div class="swiper-slide">Slide 8</div>
                         <div class="swiper-slide">Slide 9</div>
                     </div>
-                    <div class="pagination-container d-flex position-absolute justify-content-center align-items-center">
-                        <div class="swiper-button-next"></div>
+                    <div
+                        class="pagination-container d-flex position-absolute justify-content-center align-items-center">
+                        <div class="swiper-button-next"> </div>
                         <div class="swiper-button-prev"></div>
-                        <div class="swiper-pagination position-relative mt-4" data-font-weight="400"
+                        <div class="swiper-pagination position-relative mt-4" data-font-weight="500"
                             data-font-style="Neutrif Pro" data-color="darkblue"></div>
                     </div>
                 </div>
@@ -231,12 +266,15 @@
 
         });
 
-
+        function gotohome(){
+            
+        }
     </script>
     <!-- Initialize Swiper -->
     <script>
         var swiper = new Swiper(".mySwiper", {
 
+            effect: "fade",
             pagination: {
                 el: ".swiper-pagination",
                 type: "fraction",
