--- a/index.html
+++ b/index.html
@@ -173,12 +173,36 @@
                                     </div>
                                 </div>
 
-                                <div class="row justify-content-center align-items-center pt-5 mt-0">
-                                    <div class="col-12 col-lg-8">
-                                        <img src="assets/images/oxygen-furnace/optimized-lining-for-BOF.svg" alt=""
+                                <div class="row justify-content-center align-items-center pt-5 mt-0 custom-styling gap-5">
+                                    <div class="col-12 col-lg-5">
+                                        <img src="assets/images/oxygen-furnace/product-variety-brick-mixes-BOF.svg" alt=""
                                             class="w-100">
                                     </div>
+                                    <div class="col-12 col-lg-6 text-start">
+                                            <h3 data-font-style="Neutrif Pro" data-color="red" data-font-weight="bold">ANKER</h3>
+                                            <h4 data-font-style="Neutrif Pro" data-color="darkblue" data-font-weight="500">Fired Magnesia Bricks</h4>
+                                            <ul  data-font-style="Neutrif Pro">
+                                                <li>Compatible with basic slags</li>
+                                                <li>Niche products restricted to special applications - commonly used in converter safety linings</li>
+                                                <li>With carbon impregnation used in the mouth area of BOF</li> 
+                                            </ul>
 
+                                            <h3 data-font-style="Neutrif Pro" data-color="red" data-font-weight="bold">ANCARBON</h3>
+                                            <h4 data-font-style="Neutrif Pro" data-color="darkblue" data-font-weight="500">Magnesia Carbon Bricks</h4>
+                                            <ul  data-font-style="Neutrif Pro">
+                                                <li>Very high refractoriness</li>
+                                                <li>Unparalleled versatility for various and even changing process conditionss</li>
+                                                <li>Commonly used in BOF</li> 
+                                                <li>Available in many different raw material combinations and special treatments (e.g. carbon impregnation)</li>
+                                            </ul>
+
+                                            <h3 data-font-style="Neutrif Pro" data-color="red" data-font-weight="bold">RUBINIT, ANKERJET, ANKERREP, ANKERTAR, ANKERMIX, etc.</h3>
+                                            <h4 data-font-style="Neutrif Pro" data-color="darkblue" data-font-weight="500">Basic Mixes</h4>
+                                            <ul  data-font-style="Neutrif Pro">
+                                                <li>Wide range of characteristics available for gunning, ramming and patching.</li>
+                                                 
+                                            </ul>
+                                    </div>
                                 </div>
                             </div>
                             <!------ Box-1 Slide-3 ----->
