--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                     <div class="col-8 col-sm-8 col-md-7 col-lg-10 col-xl-10">
                         <h2 class="text-center display-5" data-color="blue" data-font-weight="600"
                             data-font-style="Neutrif Pro">The Main
-                            Headline of Furnace</h2>
+                            Products and Solutions Portfolio</h2>
                     </div>
                     <div class="col-2 col-sm-2 col-md-2 col-lg-1 col-xl-1">
                         <img src="assets/images/rhi-logo.svg" alt="" class="w-100">
